--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,6 +29,9 @@ dependencies {
 
     //Firebase
     implementation 'com.google.firebase:firebase-analytics:17.4.4'
+
+    //Material Design
+    implementation 'com.google.android.material:material:1.2.0'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 
