--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,6 +34,7 @@ dependencies {
 
     //Material Design
     implementation 'com.google.android.material:material:1.2.0'
+    implementation 'com.github.d-max:spots-dialog:1.1@aar'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 
